<resources>
    <string name="app_name">DB Agent</string>
    <!--buttons-->
    <string name="clickToLogin">Click to login</string>
    <string name="duration">Duration</string>
    <string name="bvs">BVS</string>
    <string name="confirm">Confirm</string>
    <string name="bikesin">Bikes in</string>
    <string name="ret">Return</string>
    <string name="signout">Sign Out</string>
    <string name="bicyclesin">Bicycles In</string>
    <string name="returnbike">Return Bike</string>
    <string name="mybicyclesout">My Bicycles out</string>
    <string name="bikesout">Bikes Out</string>
    <string name="halfDay">Half Day(6Hrs)</string>
    <string name="getrequests">Get Requests</string>
    <string name="fullDay">Full Day(7am-7pm)</string>
    <string name="req">Requests</string>
    <string name="confirmreq">Confirm Requests</string>
    <string name="bikeBalancing">Bike Balancing</string>
    <string name="agent">Agent</string>
    <string name="agentCode">Agent Code</string>
    <string name="altphonenumber">Alternative Phone Number</string>
    <string name="nin">NIN</string>
    <string name="bikenumber">Bike Number</string>
    <string name="revenue">Revenue</string>
    <string name="parkingsLots">Parkinng Lots</string>
    <string name="login">Login</string>
    <string name="tutorial">Tutorial</string>
    <string name="createAccount">No Account! Create Account Here</string>
    <string name="ugandanShillings">UGX</string>
    <string name="home">Home</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="more">More</string>
    <string name="howManyHours">How many hours</string>
    <string name="rentABike">Rent A Bike</string>
    <string name="proceed">Proceed</string>
    <string name="promotions">Promotions</string>
    <string name="about">About Digital Bikes</string>
    <string name="about1">About</string>
    <string name="safetyTips">Safety Tips</string>
    <string name="hrs">Hrs</string>
    <string name="cash">Cash</string>
    <string name="day">Day</string>
    <string name="credit">Credit</string>
    <string name="termsAndConditions">Terms And Conditions</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="myhistory">My History</string>
    <string name="parkingPoints">Parking Points</string>
    <string name="events">Events</string>
    <string name="goPremium">Go Premium</string>
    <string name="instructions">Instructions</string>
    <string name="callHelpLine">Call Help Line</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="hour">Hour</string>
    <string name="submit">SUBMIT</string>
    <string name="getInTouch">Get In Touch</string>
    <string name="benefitsOfPremium">Benefits of going premium</string>
    <string name="perMonth">100000 ugx per month</string>
    <string name="per3Months">300000 ugx per 3 months</string>
    <string name="perYear">1000000 ugx per year</string>
    <string name="fname">First Name</string>
    <string name="sname">Surname</string>
    <string name="africa">Africa</string>
    <string name="livingstone">Livingstone</string>
    <string name="cedat">CEDAT</string>
    <string name="cit">CIT</string>
    <string name="fema">FEMA</string>
    <string name="library">Library</string>
    <string name="lumumba">Lumumba</string>
    <string name="maingate">Main gate</string>
    <string name="marystuart">Marystuart</string>
    <string name="mitchell">Mitchell</string>
    <string name="nkrumah">Nkrumah</string>
    <string name="universityhall">University Hall</string>
    <string name="agentfrom">Agent From</string>
    <string name="agentto">Agent To</string>
    <string name="bywhichagent">By which Agent</string>


    <!--davie-->

    <string name="select_location_notification">
        Select your preferred bike lot
    </string>
    <string name="click_more_options">
        Select a bike lot and tap on the pop-up to proceed.
    </string>

    <!--texts-->
    <string name="loginToApp">Login To App</string>
    <string name="email">Email</string>
    <string name="accBalance">Account Balance</string>
    <string name="phone">Phone</string>
    <string name="phonenumber">Phone number</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="newToApp">New To App! Tap Here To Sign Up</string>
    <string name="name">Name</string>
    <string name="digitalBikes">Digital Bikes</string>
    <string name="welcome">Welcome To Digital Bikes</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="thankYou">Thank You For Using Digital Bikes</string>
    <string name="currency">UGX</string>
    <string name="price">Price</string>
    <string name="howToLoadCredit">How To Load Credit</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="crossCountryComingSoon">Cross Country Coming Soon</string>
    <string name="digitalTime">Digital Time</string>
    <string name="shareCodeToEarnDigitalTime">Share Code To Earn Digital Time</string>
    <string name="howToEarnDigitalTime">How To Earn Digital Time</string>


    <!--LONG texts-->

    <string name="textForAbout">He who [a]dwells in the shelter of the Most High
Will remain secure and rest in the shadow of the Almighty [whose power no enemy can withstand].
2
I will say of the Lord, “He is my refuge and my fortress,
My God, in whom I trust [with great confidence, and on whom I rely]!”
3
For He will save you from the trap of the fowler,
And from the deadly pestilence.
4
He will cover you and completely protect you with His pinions,
And under His wings you will find refuge;
His faithfulness is a shield and a wall.
5
You will not be afraid of the terror of night,
Nor of the arrow that flies by day,
6
Nor of the pestilence that stalks in darkness,
Nor of the destruction (sudden death) that lays waste at noon.
7
A thousand may fall at your side
And ten thousand at your right hand,
But danger will not come near you.
8
You will only [be a spectator as you] look on with your eyes
And witness the [divine] repayment of the wicked [as you watch safely from the shelter of the Most High].
9
Because you have made the Lord, [who is] my refuge,
Even the Most High, your dwelling place,
10
No evil will befall you,
Nor will any plague come near your tent.
11
For He will command His angels in regard to you,
To protect and defend and guard you in all your ways [of obedience and service].
12
They will lift you up in their hands,
So that you do not [even] strike your foot against a stone.
13
You will tread upon the lion and cobra;
The young lion and the serpent you will trample underfoot.
14
“Because he set his love on Me, therefore I will save him;
I will set him [securely] on high, because he knows My name [he confidently trusts and relies on Me, knowing I will never abandon him, no, never].


    </string>

    <string name="textForSafetyTips">

        Tips for cycling on roads

1. Cycling safely

Follow the Highway Code – don’t jump red lights and don’t cycle on the pavement unless it’s a designated cycle path.
In wet weather watch your speed as surfaces may be slippery and it will take you longer to stop.
Ride positively, decisively, and well clear of the kerb.
Consider wearing a helmet.
Keep your bike roadworthy.
2. Make sure motorists can see you

Ride in a position where you can see and be seen.
Use lights and consider wearing bright or reflective clothing, especially in towns, at night and in bad weather.
Make eye contact with other road users, especially at junctions, then you know they’ve seen you.
Signal clearly at all times.
Use your bell - not all pedestrians can see you.
3. Be aware of vehicles

Many collisions occur when a cyclist is on the inside of a vehicle which is turning left. Don’t assume the vehicle is going straight ahead just because it isn’t signalling left. Always avoid ‘undertaking’ any vehicle in this situation – it’s better to hang back until the vehicle has moved off.

Never cycle along the inside of large vehicles, such as lorries and buses, especially at junctions, where most accidents happen.

When turning left, a lorry will often pull out to the right first, creating a wide gap between the vehicle and the kerb. Many cyclists think it’s safe to ride into this space, but this is a dangerous place to be as the gap quickly disappears when the lorry swings around to the left.

    </string>

    <string name="earningProcess1">Share code with friends</string>
    <string name="earningProcess2">Friends use code to join Digital Bikes</string>
    <string name="earningProcess3">Hours are deposited to your account</string>

    <string name="visitOurOffices">You can visit our main office</string>
    <string name="ourOffices">Church House Office 001 Kampala Road P. O. Box 416</string>
    <string name="title_activity_rent_map1">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rentingmap">Map</string>
    <string name="title_activity_parking_points_map">Map</string>
    <string name="title_activity_mapsimport1">Map</string>
    <string name="title_activity_text_recognition">textRecognition</string>

</resources>
